# SYJ-AI

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
prompts/: master_system_prompt.md
scripts/: smoke_test.py
syj_ai/: __init__.py  __main__.py  agent.py  config.py
syj_ai/models/: base.py  ollama_client.py  router.py
syj_ai/tools/: filesystem.py  git_tools.py  shell.py
syj_ai/utils/: logger.py
syj_ai/workflow/: codeblocks.py  stages.py
tests/: test_codeblocks.py  test_filesystem.py  test_router.py  test_shell.py
